Make ::backdrop inherit from originating element

When ::backdrop was moved from the fullscreen spec to css-position-4, it
was made tree-abiding, inheriting from its originating element.

A few of the tests needed modification as they expected things like
visibility and pointer-events not inherit from the originating
element into the ::backdrop.

Bug: 827397
Change-Id: Ie4298d7e4b8531a2aaaaeadbe3fc4d08dd8eb712
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4886808
Reviewed-by: Anders Hartvoll Ruud <andruud@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1202396}